change binary link

--- a/index.html
+++ b/index.html
@@ -54,8 +54,13 @@
 <h2>Contact</h2>
 <p>To3oo Mi2ukam1 (moo@tmiz.net)<br/>      </p>
 
+    <h2>Current Version</h2>
+    <p>0.1</p>
 
     <h2>Download</h2>
+    <p>
+      You can download <a href="http://bit.ly/e3YZT5">exntension binary</a> on this project. 
+    </p>
     <p>
       You can download this project in either
       <a href="http://github.com/tmiz/belugaXpander/zipball/master">zip</a> or
