--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>tmiz/belugaXpander @ GitHub</title>
+  <title>belugaXpander @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -43,26 +43,30 @@
     </div>
 
     <h1><a href="http://github.com/tmiz/belugaXpander">belugaXpander</a>
+    	<br>
       <span class="small">by <a href="http://github.com/tmiz">tmiz</a></span></h1>
-
     <div class="description">
+      <img src="./title.png"><br>
       Safari Extension for Beluga Group Chat
     </div>
 
     <h2>Authors</h2>
-<p>To3oo Mi2ukam1 (moo@tmiz.net)<br/><br/>      </p>
+<p>To3oo Mi2ukam1 (moo@tmiz.net)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>To3oo Mi2ukam1 (moo@tmiz.net)<br/>      </p>
+<p>To3oo Mi2ukam1 (moo@tmiz.net)
+<br/>      </p>
 
     <h2>Current Version</h2>
     <p>0.1</p>
 
     <h2>Download</h2>
     <p>
-      You can download <a href="http://bit.ly/e3YZT5">exntension binary</a> on this project. 
+      You can download <font size=+2><B><a href="http://bit.ly/e3YZT5">exntension binary</a></B></font> on this project. 
     </p>
     <p>
-      You can download this project in either
+      You can download this project source in either
       <a href="http://github.com/tmiz/belugaXpander/zipball/master">zip</a> or
       <a href="http://github.com/tmiz/belugaXpander/tarball/master">tar</a> formats.
     </p>
