--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>belugaXpander @ GitHub</title>
+  <title>belugaXtender @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -31,18 +31,18 @@
 </head>
 
 <body>
-  <a href="http://github.com/tmiz/belugaXpander"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/tmiz/belugaXtender"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/tmiz/belugaXpander/zipball/master">
+      <a href="http://github.com/tmiz/belugaXtender/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/tmiz/belugaXpander/tarball/master">
+      <a href="http://github.com/tmiz/belugaXtender/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/tmiz/belugaXpander">belugaXpander</a>
+    <h1><a href="http://github.com/tmiz/belugaXtender">belugaXtender</a>
     	<br>
       <span class="small">by <a href="http://github.com/tmiz">tmiz</a></span></h1>
     <div class="description">
@@ -67,16 +67,16 @@
     </p>
     <p>
       You can download this project source in either
-      <a href="http://github.com/tmiz/belugaXpander/zipball/master">zip</a> or
-      <a href="http://github.com/tmiz/belugaXpander/tarball/master">tar</a> formats.
+      <a href="http://github.com/tmiz/belugaXtender/zipball/master">zip</a> or
+      <a href="http://github.com/tmiz/belugaXtender/tarball/master">tar</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/tmiz/belugaXpander</pre>
+      <pre>$ git clone git://github.com/tmiz/belugaXtender</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/tmiz/belugaXpander">tmiz/belugaXpander</a>
+      get the source code on GitHub : <a href="http://github.com/tmiz/belugaXtender">tmiz/belugaXtender</a>
     </div>
 
   </div>
