--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
       <span class="small">by <a href="http://github.com/tmiz">tmiz</a></span></h1>
     <div class="description">
       <img src="./title.png"><br>
-      Safari Extension for Beluga Group Chat
+      Safari Extension for <a href="http://belugapods.com/">Beluga</a> Group Chat.
+      <ul>
+      <li>Find Beluga on tags</li>
+      <li>Send without [submit] button</li>
+      <li>Unread counter</li>
+      </ul>
     </div>
 
     <h2>Authors</h2>
@@ -59,11 +64,12 @@
 <br/>      </p>
 
     <h2>Current Version</h2>
-    <p>0.1</p>
+    <p>0.1 (Mon Mar 28 23:31:54 JST 2011)</p>
 
     <h2>Download</h2>
     <p>
-      You can download <font size=+2><B><a href="http://bit.ly/e3YZT5">exntension binary</a></B></font> on this project. 
+      You can download <font size=+2><B><a href="http://bit.ly/e3YZT5">exntension binary</a></B></font> on this project. <br>
+      (Install: Do double click BelugaXtender.safariextz)
     </p>
     <p>
       You can download this project source in either
