--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       Safari Extension for <a href="http://belugapods.com/">Beluga</a> Group Chat.
       <ul>
       <li>Find Beluga on tags</li>
-      <li>Send without [submit] button</li>
-      <li>Unread counter</li>
+      <li>Send without [Send] button([Enter] or [Shift]+[Enter])</li>
+      <li>Unread Message Counter</li>
       </ul>
     </div>
 
