--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       <li>Find Beluga on tags</li>
       <li>Send without [Send] button([Enter] or [Shift]+[Enter])</li>
       <li>Unread Message Counter</li>
-      </ul>
+      </ul><br>
+      This extension is inspired from Chrome Extension <a href="https://chrome.google.com/extensions/detail/hcfbfgeoipaahgaicdlabdjpmfkdhhki">Beluga Helper</a>.
     </div>
 
     <h2>Authors</h2>
