--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <li>Send without [Send] button([Enter] or [Shift]+[Enter])</li>
       <li>Unread Message Counter</li>
       </ul><br>
-      This extension is inspired from Chrome Extension <a href="https://chrome.google.com/extensions/detail/hcfbfgeoipaahgaicdlabdjpmfkdhhki">Beluga Helper</a>.
+      This extension has been inspired from Chrome Extension <a href="https://chrome.google.com/extensions/detail/hcfbfgeoipaahgaicdlabdjpmfkdhhki">Beluga Helper (drikin's)</a>.
     </div>
 
     <h2>Authors</h2>
