--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <span class="small">by <a href="http://github.com/tmiz">tmiz</a></span></h1>
     <div class="description">
       <img src="./title.png"><br>
-      Safari Extension for <a href="http://belugapods.com/">Beluga</a> Group Chat.
+      Safari Extension for <a href="http://belugapods.com/">Beluga</a> Group Chat on web access.
       <ul>
       <li>Find Beluga on tags</li>
       <li>Send without [Send] button([Enter] or [Shift]+[Enter])</li>
