--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #3780cf;
+      background-color: #f7f7f7;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
@@ -16,7 +16,7 @@
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #c87f30; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; color: #c87f30; margin-bottom: 3px;}
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #c87f30; }
@@ -35,16 +35,8 @@
 
   <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/tmiz/belugaXtender/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/tmiz/belugaXtender/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
+    <h1><img src="icon.png">belugaXtender</h1>
 
-    <h1><a href="http://github.com/tmiz/belugaXtender">belugaXtender</a>
-    	<br>
-      <span class="small">by <a href="http://github.com/tmiz">tmiz</a></span></h1>
     <div class="description">
       <img src="./title.png"><br>
       Safari Extension for <a href="http://belugapods.com/">Beluga</a> Group Chat on web access.
