--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       Safari Extension for <a href="http://belugapods.com/">Beluga</a> Group Chat on web access.
       <ul>
       <li>Find Beluga on tags</li>
-      <li>Send without [Send] button([Enter] or [Shift]+[Enter])</li>
-      <li>Unread Message Counter</li>
+      <li>Post without [Send] button( [Enter] key or [Shift]+[Enter] keys)</li>
+      <li>Counter Badge of Unread Messages</li>
       </ul><br>
       This extension has been inspired from Chrome Extension <a href="https://chrome.google.com/extensions/detail/hcfbfgeoipaahgaicdlabdjpmfkdhhki">Beluga Helper (drikin's)</a>.
     </div>
