--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
 <br/>      </p>
 
     <h2>Current Version</h2>
-    <p>0.1 (Mon Mar 28 23:31:54 JST 2011)</p>
+    <p>0.1.1 (Tue Mar 29 12:31:49 JST 2011)</p>
+
+    <h2>What's New</h2>
+    <p>0.1.1 Support find beluga tab from all browser windows.</p>
+    <img src="findBeluga.png" width=400px>
 
     <h2>Download</h2>
     <p>
-      You can download <font size=+2><B><a href="http://bit.ly/e3YZT5">exntension binary</a></B></font> on this project. <br>
+      You can download <font size=+2><B><a href="http://bit.ly/gppVoN">exntension binary(1.1)</a></B></font> on this project. <br>
       (Install: Do double click BelugaXtender.safariextz)
     </p>
     <p>
