--- a/index.html
+++ b/index.html
@@ -57,17 +57,27 @@
 <br/>      </p>
 
     <h2>Current Version</h2>
-    <p>0.1.1 (Tue Mar 29 12:31:49 JST 2011)</p>
+    <p>0.1.2 (Sat Apr  2 00:43:31 JST 2011)</p>
 
     <h2>What's New</h2>
+    <p>0.1.2 Growl Support with <a href="https://github.com/uasi/growl-safari-bridge">GrowlSafariBridge web plugin( by uasi )</a>
+    
+    <img src="growl.png">
+    </p>
     <p>0.1.1 Support find beluga tab from all browser windows.</p>
     <img src="findBeluga.png" width=400px>
 
     <h2>Download</h2>
     <p>
-      You can download <font size=+2><B><a href="http://bit.ly/gppVoN">exntension binary(0.1.1)</a></B></font> on this project. <br>
-      (Install: Do double click BelugaXtender.safariextz)
+      You can download <font size=+2><B><a href="http://bit.ly/eto1r1">exntension binary(0.1.2)</a></B></font> on this project. <br>
     </p>
+    <h2>Install</h2>
+    <p>
+      (1)Do double click BelugaXtender.safariextz. And permit to use extension on Safari.<br>
+      (2)If you want to use <a href="http://growl.info/">Growl</a> with BelugaXtender, Install Growl and Copy GrowlSafariBridge.webplugin(bundled) to ~/Library/Internet Plugins/ and Restart Safari.(Option)
+    </p>
+
+    <h2>Sources</h2>
     <p>
       You can download this project source in either
       <a href="http://github.com/tmiz/belugaXtender/zipball/master">zip</a> or
