--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     <p>0.1.2 Growl Support with <a href="https://github.com/uasi/growl-safari-bridge">GrowlSafariBridge web plugin( by uasi )</a>
     <br>
     <img src="growl.png">
+    <p>improve setting change reflection
     </p>
+
     <p>0.1.1 Support find beluga tab from all browser windows.</p>
     <img src="findBeluga.png" width=400px>
 
