--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h2>Install</h2>
     <p>
       (1)Do double click BelugaXtender.safariextz. And permit to use extension on Safari.<br>
-      (2)If you want to use <a href="http://growl.info/">Growl</a> with BelugaXtender, Install Growl and Copy GrowlSafariBridge.webplugin(bundled) to ~/Library/Internet Plugins/ and Restart Safari.(Option)
+      (2)If you want to use <a href="http://growl.info/">Growl</a> with BelugaXtender, Install Growl and Copy GrowlSafariBridge.webplugin(bundled) to ~/Library/Internet Plugins/ and restart Safari.(Option)
     </p>
 
     <h2>Sources</h2>
