--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>belugaXtender @ GitHub</title>
+  <title>belugaXtender</title>
 
   <style type="text/css">
     body {
@@ -52,31 +52,37 @@
 <p>To3oo Mi2ukam1 (moo@tmiz.net)
 <br/>
 <br/>      </p>
-<h2>Contact</h2>
-<p>To3oo Mi2ukam1 (moo@tmiz.net)
-<br/>      </p>
 
     <h2>Current Version</h2>
-    <p>0.1.2 (Sat Apr  2 00:43:31 JST 2011)</p>
+    <p>0.2 (Sun Apr 17 23:20:36 JST 2011)</p>
 
     <h2>What's New</h2>
-    <p>0.1.2 Growl Support with <a href="https://github.com/uasi/growl-safari-bridge">GrowlSafariBridge web plugin( by uasi )</a>
-    <br>
-    <img src="growl.png">
-    <p>improve setting change reflection
-    </p>
+	<p>0.2 <ul>
+	<li>Support auto open url function on background new tab from incoming messages<br>
+	<li>Detach GrowlSafariBridge from Release Bundle
+	</ul>
+	</p>
 
-    <p>0.1.1 Support find beluga tab from all browser windows.</p>
-    <img src="findBeluga.png" width=400px>
+    <p>0.1.2 
+    <ul>
+    <li>Growl Support with <a href="https://github.com/uasi/growl-safari-bridge">GrowlSafariBridge web plugin( by uasi )</a>
+    <img src="growl.png">
+    <li>Improve setting change reflection
+    </ul>
+    </p>
 
     <h2>Download</h2>
     <p>
-      You can download <font size=+2><B><a href="http://bit.ly/eto1r1">exntension binary(0.1.2)</a></B></font> on this project. <br>
+      You can download <font size=+2><B><a href="http://bit.ly/fZW78Y">exntension binary(0.2)</a></B></font> on this project. <br>
     </p>
     <h2>Install</h2>
     <p>
-      (1)Do double click BelugaXtender.safariextz. And permit to use extension on Safari.<br>
-      (2)If you want to use <a href="http://growl.info/">Growl</a> with BelugaXtender, Install Growl and Copy GrowlSafariBridge.webplugin(bundled) to ~/Library/Internet Plugins/ and restart Safari.(Option)
+      (1) Do double click BelugaXtender.safariextz. And permit to use extension on Safari.<br>
+	  (2) If you want to use with <a href="http://growl.info/">Growl</a>, BelugaXtender requires GrowlSafariBridge. <br>do download from following website
+	  
+	  <a href="https://github.com/uasi/growl-safari-bridge/downloads">https://github.com/uasi/growl-safari-bridge/downloads</a>
+
+	and move GrowlSafariBridge.webplugin to ~/Library/Internet Plugins/
     </p>
 
     <h2>Sources</h2>
