--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
       <li>Find Beluga on tags</li>
       <li>Post without clicking [Send] button( [Enter] key or [Shift]+[Enter] keys)</li>
       <li>Counter Badge of Unread Messages</li>
+      <li>Open contained URL on background tab automatically</li>
       </ul><br>
+      
+      
+	  <img src="config_screen.png" width=400px><br>
       This extension has been inspired from Chrome Extension <a href="https://chrome.google.com/extensions/detail/hcfbfgeoipaahgaicdlabdjpmfkdhhki">Beluga Helper (drikin's)</a>.
     </div>
 
