--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@
 <br/>      </p>
 
     <h2>Current Version</h2>
-    <p>0.2 (Sun Apr 17 23:20:36 JST 2011)</p>
+    <p>0.2.1 (Mon Apr 18 13:36:34 JST 2011)</p>
 
     <h2>What's New</h2>
+	<p>0.2.1 <ul>
+	<li>Fix typo on readme.</li>
+	<li>Improve behavior calling Growl</li>
+	</ul>
+	    
 	<p>0.2 <ul>
 	<li>Support auto open url function on background new tab from incoming messages<br>
 	<li>Detach GrowlSafariBridge from Release Bundle
@@ -77,7 +82,7 @@
 
     <h2>Download</h2>
     <p>
-      You can download <font size=+2><B><a href="http://bit.ly/fZW78Y">exntension binary(0.2)</a></B></font> on this project. <br>
+      You can download <font size=+2><B><a href="http://bit.ly/enUvkt">exntension binary(0.2.1)</a></B></font> on this project. <br>
     </p>
     <h2>Install</h2>
     <p>
