--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <h2>What's New</h2>
 	<p>0.2.2 <ul>
-	<li>Fix some bugs</li>
+	<li>Fix some bugs(The bug becomes obvious on Safari 5.1)</li>
 	</ul>
 
 	<p>0.2.1 <ul>
