--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 
     <h2>What's New</h2>
 	<p>0.2.2 <ul>
-	<li>Fix some bugs(The bug becomes obvious on Safari 5.1 DP)
-	(But Growl Plugin was not worked yet on Safari 5.1 DP).</li>
+	<li>Fix some bugs(The bug becomes obvious on Safari 5.1 DP. And Growl Plugin has not been worked yet on Safari 5.1 DP).</li>
 	</ul>
 
 	<p>0.2.1 <ul>
